--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,8 @@
-version: "3.7"
+version: "3.9"
 
 services:
-  socialnetwork-database:
+  socialnetwork-postgresql:
     image: socialnetwork-postgresql
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
     ports:
       - "5432:5432"
     volumes:
@@ -18,11 +15,16 @@ services:
 
   socialnetwork-config-server:
     image: socialnetwork-config-server-1.0
+    environment:
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://socialnetwork-eureka-service-discovery:8761/eureka
     ports:
       - "8888:8888"
 
   socialnetwork-api-gateway:
     image: socialnetwork-api-gateway-1.0
+    environment:
+      - SPRING_CONFIG_IMPORT=optional:configserver:http://socialnetwork-config-server:8888
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://socialnetwork-eureka-service-discovery:8761/eureka
     ports:
       - "8762:8762"
       - "5009:5009"
@@ -31,27 +33,15 @@ services:
       - socialnetwork-config-server
     entrypoint: ./wait-for-it.sh socialnetwork-config-server:8888 --timeout=20 -- java -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5009 -jar socialnetwork-api-gateway-1.0.jar
 
-  zookeeper:
-    image: wurstmeister/zookeeper
-    ports:
-      - "2181:2181"
-
-  kafka:
-    image: wurstmeister/kafka
-    ports:
-      - "9092:9092"
-    environment:
-      KAFKA_ADVERTISED_HOST_NAME: kafka
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_CREATE_TOPIC: "topic.user.new:1, topic.user.update:1, topic.user.delete:1, topic.profile.new:1"
-    depends_on:
-      - zookeeper
-
   socialnetwork-auth-server:
     image: socialnetwork-auth-server-1.0
     environment:
-      - SPRING_PROFILE_ACTIVE=local
+      - SPRING_CONFIG_IMPORT=optional:configserver:http://socialnetwork-config-server:8888
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://socialnetwork-postgresql:5432/sn_auth_server_db
+      - SPRING_DATASOURCE_USERNAME=sn_auth_server_user
+      - SPRING_DATASOURCE_PASSWORD=sn_auth_server_password
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://socialnetwork-eureka-service-discovery:8761/eureka
+      - SN_KAFKA_SERVER=kafka:9092
     ports:
       - "8080:8080"
       - "5005:5005"
@@ -65,10 +55,12 @@ services:
   socialnetwork-user-service:
     image: socialnetwork-user-service-1.0
     environment:
-      - SPRING_PROFILE_ACTIVE=local
-      - SOCIALNETWORK_JDBC_URL=jdbc:postgresql://socialnetwork-database:5432/sn_user_service_db
-      - SOCIALNETWORK_JDBC_USER=sn_user_service_user
-      - SOCIALNETWORK_JDBC_PASSWORD=sn_user_service_password
+      - SPRING_CONFIG_IMPORT=optional:configserver:http://socialnetwork-config-server:8888
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://socialnetwork-postgresql:5432/sn_user_service_db
+      - SPRING_DATASOURCE_USERNAME=sn_user_service_user
+      - SPRING_DATASOURCE_PASSWORD=sn_user_service_password
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://socialnetwork-eureka-service-discovery:8761/eureka
+      - SN_KAFKA_SERVER=kafka:9092
     ports:
       - "8084:8084"
       - "5006:5006"
@@ -83,10 +75,13 @@ services:
   socialnetwork-profile-service:
     image: socialnetwork-profile-service-1.0
     environment:
-      - SPRING_PROFILE_ACTIVE=local
-      - SOCIALNETWORK_JDBC_URL=jdbc:postgresql://socialnetwork-database:5432/sn_profile_service_db
-      - SOCIALNETWORK_JDBC_USER=sn_profile_service_user
-      - SOCIALNETWORK_JDBC_PASSWORD=sn_profile_service_password
+      - SPRING_CONFIG_IMPORT=optional:configserver:http://socialnetwork-config-server:8888
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://socialnetwork-postgresql:5432/sn_profile_service_db
+      - SPRING_DATASOURCE_USERNAME=sn_profile_service_user
+      - SPRING_DATASOURCE_PASSWORD=sn_profile_service_password
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://socialnetwork-eureka-service-discovery:8761/eureka
+      - SN_KAFKA_SERVER=kafka:9092
+      - SN_FEIGNCLIENT_USERSERVICE_URL=http://socialnetwork-user-service:8084/api/v1
     ports:
       - "8081:8081"
       - "5007:5007"
@@ -94,15 +89,32 @@ services:
       - socialnetwork-eureka-service-discovery
       - socialnetwork-config-server
       - socialnetwork-api-gateway
-      - socialnetwork-database
+      - socialnetwork-postgresql
     entrypoint: ./wait-for-it.sh socialnetwork-config-server:8888 --timeout=20 -- java -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5007 -jar socialnetwork-profile-service-1.0.jar
     volumes:
        - /avatar/
 
-  socialnetwork-app-client:
-    image: socialnetwork-app-client
+  kafka:
+    image: wurstmeister/kafka
     ports:
-      - "3000:3000"
-    volumes:
-      - /app/node_modules
-      - ./:/app
+      - "9092:9092"
+    environment:
+      KAFKA_ADVERTISED_HOST_NAME: kafka
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_CREATE_TOPIC: "topic.user.new:1, topic.profile.new:1"
+    depends_on:
+      - zookeeper
+
+  zookeeper:
+    image: wurstmeister/zookeeper
+    ports:
+      - "2181:2181"
+
+#  socialnetwork-app-client:
+#    image: socialnetwork-app-client
+#    ports:
+#      - "3000:3000"
+#    volumes:
+#      - /app/node_modules
+#      - ./:/app
