--- a/spring-config/configurations/api-gateway-local.properties
+++ b/spring-config/configurations/api-gateway-local.properties
@@ -1,2 +1,12 @@
 # Spring Cloud: Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+# Spring Cloud: Config
+spring.config.import=optional:configserver:http://localhost:8888
+
+# Spring Cloud: Gateway CORS
+spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping=true
+
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedOrigins=*
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedHeaders=*
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedMethods=*
