--- a/socialnetwork-auth-server/src/main/resources/application.properties
+++ b/socialnetwork-auth-server/src/main/resources/application.properties
@@ -8,4 +8,4 @@ server.port=8080
 spring.profiles.active=local
 
 # Spring Cloud: Config
-spring.config.import=optional:configserver:http://localhost:8888
+spring.config.import=optional:configserver:http://${CONFIG_SERVER_HOST:localhost}:8888
